--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,91 @@
-anaconda-client
-anaconda-navigator==2.0.4
-appdirs==1.4.4
-applaunchservices==0.2.1
-argh==0.26.2
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-bkcharts==0.2
-black==19.10b0
-boto==2.49.0
-Bottleneck==1.3.2
-branca==0.4.2
-brotlipy==0.7.0
-cachetools==4.2.2
-certifi==2020.12.5
-click-plugins==1.1.1
-cligj==0.7.2
-clyent==1.2.2
-conda==4.10.3
-conda-build==3.21.4
-conda-verify==3.4.2
-contextily==1.1.0
-contextlib2==0.6.0.post1
-cycler==0.10.0
-cytoolz==0.11.0
-decorator==4.4.2
-descartes==1.1.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-ffmpy==0.3.0
-Fiona==1.8.20
-folium==0.12.1
-future==0.18.2
-geographiclib==1.52
-geojson==2.5.0
-geopandas==0.9.0
-geopy==2.2.0
-gmpy2==2.0.8
-google-auth==2.1.0
-google-auth-oauthlib==0.4.6
-gspread==4.0.1
-h5py==2.10.0
-HeapDict==1.0.1
-imageio-ffmpeg==0.4.5
-jdcal==1.4.1
-json5==0.9.5
-jupyter==1.0.0
-llvmlite==0.36.0
-locket==0.2.1
-mapclassify==2.4.3
-mccabe==0.6.1
-mercantile==1.2.1
-mizani==0.7.3
-mkl-fft==1.3.0
-mkl-service==2.3.0
-moviepy==1.0.3
-mpmath==1.2.1
-multipledispatch==0.6.0
-munch==2.5.0
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-oauthlib==3.1.1
-olefile==0.46
-palettable==3.3.0
-pandas==1.2.4
-parso==0.7.0
-pathspec==0.7.0
-patsy==0.5.1
-pep8==1.7.1
-pkginfo==1.7.0
-ply==3.11
-polyline==1.4.0
-proglog==0.1.9
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat==0.6.3
-pycurl==7.43.0.6
-pyodbc===4.0.0-unsupported
-pyproj==3.2.1
-pytest==6.2.3
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-QtPy==1.9.0
-rasterio==1.2.8
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-image==0.18.1
-Shapely==1.7.1
-simplegeneric==0.8.1
-snuggs==1.4.7
-sodapy==2.1.0
-tables==3.6.1
-terminado==0.9.4
-tifffile==2020.10.1
-unicodecsv==0.14.1
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-zict==2.0.0
-zope.event==4.5.0
+anaconda-navigator
+anaconda-project
+argh
+asn1crypto
+astropy
+autopep8
+backports.shutil-get-terminal-size
+bitarray
+bkcharts
+bokeh
+boto
+bottleneck
+brotlipy
+colorama
+conda-build
+conda-package-handling
+conda-repo-cli
+conda-token
+conda-verify
+contextily
+contextlib2
+cython
+cytoolz
+distributed
+fastcache
+ffmpy
+flake8
+flask
+folium
+geojson
+geopandas
+gevent
+glob2
+gmpy2
+gspread
+h5py
+html5lib
+importlib-metadata
+jdcal
+jupyter
+jupyterlab
+mapclassify
+mkl-fft
+mkl-random
+mkl-service
+mock
+more-itertools
+moviepy
+multipledispatch
+mypy-extensions
+navigator-updater
+nltk
+nose
+numba
+olefile
+openpyxl
+pandas-datareader
+path
+pathlib2
+pep8
+pip-chill
+plotnine
+ply
+polyline
+pycurl
+pydocstyle
+pyodbc
+pyopenssl
+pysocks
+pytest
+rope
+rtree
+scikit-image
+seaborn
+simplegeneric
+singledispatch
+sodapy
+sortedcollections
+sphinxcontrib-websupport
+spyder
+sqlalchemy
+sympy
+tables
+unicodecsv
+voila
+xlrd
+xlsxwriter
+xlwings
+xlwt
+xmltodict
+yapf
